# cmu-aegis-scholar

./: .gitattributes  .gitignore  AegisScholar_Neo4J.py  README.md  graphs.ipynb  openalex_api  package-lock.json  package.json  sample_author_search_results.json
.devcontainer/: Dockerfile  devcontainer.json  shell-init.sh
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: general_issue.md  integration_test.md
.github/workflows/: ci.yml  release.yml
Adriana/: AegisScholar_Neo4J.py  Neo4j_D3.js  OrgPOC.ipynb  dtic_enriched_organizations.json
_archive/Adriana/: AegisScholar_Neo4J.py  Wireframe  dtic_enriched_organizations.json
_archive/data_exploration/: dtic_abstracts.ipynb  open_alex_works.ipynb  open_alex_works_orgs.ipynb  vector_search.ipynb
_archive/model_evaluation/: check_cuda.py  create_summary_table.py  data_loader.py  docker-compose.yml  evaluate_embeddings.py  quick_start.ps1  requirements.txt  visualize_results.ipynb
_archive/steve/: .gitignore  Advanced Frontend Visualization  FrontEnd Visualization.txt  build_vector_store.py  requirements.txt
data/samples/: dtic_author.json  dtic_org.json  dtic_topic.json  dtic_work.json  sample_organizations_tiny.json  sample_works_tiny.json
data_exploration/: MissingDataReport.ipynb  authors_per_topic_dtic.ipynb  open_alex_authors.ipynb  open_alex_topics.ipynb  open_alex_works_orgs.ipynb  vector_search.ipynb
data_schema/: README.md  database_schemas.json  sample_authors_tiny.json  sample_topics_tiny.json
dev/: .env.example  .env.example.full  .env.example.subset  docker-compose.yml
frontend/: .gitignore  .prettierignore  Dockerfile  TESTING.md  docker-entrypoint.sh  nginx-http.conf  nginx-https.conf  package-lock.json  package.json  vite.config.js  vitest.config.js
infra/: .terraform.lock.hcl  README.md  main.tf  output.tf  terraform.tfvars.example  variables.tf
jobs/: README_TESTING.md
jobs/graph-loader/: .env.example  Dockerfile  README.md  pyproject.toml
jobs/graph-loader/app/: Dockerfile  config.py  loader.py
jobs/graph-loader/tests/: __init__.py  conftest.py  test_loader.py
jobs/vector-loader/: .env.example  .gitignore  Dockerfile  README.md  pyproject.toml
jobs/vector-loader/app/: __init__.py  config.py  loader.py
jobs/vector-loader/tests/: conftest.py  test_loader.py
k8s/: .gitignore  QUICKSTART.md  README.md  namespaces.yaml  registry-config-daemonset.yaml  secrets.example.yaml  traefik-ingress.yaml
libs/: README_TESTING.md
libs/example_lib/: pyproject.toml
libs/example_lib/tests/: __init__.py  conftest.py  test_example_lib.py
model_evaluation/: Author Ratings - Overall.csv  README.md  author_papers.json  copy_evaluation_works.py  data_loader.py  docker-compose.yml  evaluate_embeddings.py  quick_start.ps1  requirements.txt  run_evaluation.py  test_orca_model.py  visualize_results.py
scripts/: README.md  build_dtic_test_subset.py  setup.py  test_runner.py
services/: README_TESTING.md
services/aegis-scholar-api/: .env.example  .gitignore  Dockerfile  README.md  pyproject.toml
services/aegis-scholar-api/app/: config.py  main.py  schemas.py
services/aegis-scholar-api/app/services/: graph_db.py  vector_db.py
services/aegis-scholar-api/tests/: conftest.py  test_api.py
services/aegis_scholar_api/: Dockerfile  pyproject.toml
services/aegis_scholar_api/app/: __init__.py  config.py  main.py  schemas.py
services/aegis_scholar_api/app/services/: graph_db.py
services/aegis_scholar_api/tests/: __init__.py  test_api.py
services/example-service/: Dockerfile  pyproject.toml
services/example-service/app/: __init__.py  main.py
services/example-service/tests/: test_sample.py
services/graph-db/: .env.example  .gitignore  Dockerfile  README.md  pyproject.toml
services/graph-db/app/: config.py  main.py  schemas.py
services/graph-db/tests/: __init__.py  conftest.py  test_api.py  test_graph_api.py  test_graph_api_coverage.py
services/mips/: docker-compose.yml  email_gen.py  pyproject.toml
services/mips/app/: main.py
services/mips/tests/: test_main.py
services/vector-db/: .env.example  .gitignore  Dockerfile  README.md  pyproject.toml
services/vector-db/app/: __init__.py  config.py  main.py  schema_def.py  schemas.py
services/vector-db/tests/: __init__.py  conftest.py  test_vector_api.py  test_vector_api_coverage.py
steve/: OpenAlex_to_Blob.txt  README.md  aegis_web.py  alextest.py  create_golden_dataset.py  observations.txt  requirements.txt  search_aegis.py  worker2.py
terraform/: .terraform.lock.hcl  README.md  main.tf  variables.tf
tests/: README.md  TEST_MAP.md  __init__.py  conftest.py  pyproject.toml  test_api_integration.py  test_data_loading.py  test_end_to_end.py  test_graph_neo4j.py  test_identity_integration.py  test_identity_ldap.py  test_ldap.py  test_main_api_graph.py  test_main_api_identity.py  test_main_api_vector.py  test_milvus.py  test_vector_milvus.py
tests/dtic_test_subset/: analysis.json
tests/scholar_api/: README.md  conftest.py  test_main_graph.py
utils/: update_author_metadata.py  vector_viz.ipynb
utils/dtic/: .gitignore  AMPLIFY_README.md  README.md  amplify_keywords.py  analyze.py  author_page_data.json  author_search_data.json  check_status.py  compress_to_jsonl.py  config.json  download_dtic_from_blob.py  examples.py  inspect_author_page.py  pyproject.toml  requirements.txt  run.bat  run_amplify_keywords.sh  run_scraper_with_uploader.ps1  run_scraper_with_uploader.sh  scraper.py  test_performance.py  uploader.py  verify_setup.py
utils/dtic/cleaning/: README.md  clean_authors.py  clean_orgs.py  clean_topics.py  clean_works.py  extraction_state_authors.json  extraction_state_org.json  extraction_state_topics.json  extraction_state_works.json  pyproject.toml  run_cleaner.ps1  run_cleaner.sh
utils/dtic/scraping/: AUTHOR_SCRAPER_README.md  SELECTOR_GUIDE.md  UPLOADER_README.md  amplify_keywords.py  analyze.py  examples.py  pyproject.toml  run_amplify_keywords.ps1  run_author_scraper.ps1  run_author_scraper.sh  scrape_authors.py  scraper.py  test_performance.py  uploader.py  verify_setup.py
(+847 files in other folders)
