[tool.poetry]
name = "integration-tests"
version = "1.0.0"
description = "Integration tests for Aegis Scholar components"
authors = ["Aegis Scholar Team"]
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
pydantic-settings = "^2.14.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
pytest-asyncio = "^0.23.0"
pytest-cov = "^4.1.0"
pytest-mock = "^3.12"
httpx = "^0.26.0"
# For running services in tests
testcontainers = "^3.7.0"
pylint = "^4.0.5"
ldap3 = "^2.9.1"
fastapi = "^0.136.1"
orjson = ">=3.11.8,<4.0.0"
uvicorn = ">=0.44.0,<0.45.0"
rapidfuzz = ">=3.14.5,<4.0.0"
pydantic = ">=2.6.3,<3.0.0"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
markers = [
    "integration: Integration tests",
    "slow: Slow running tests",
    "requires_docker: Tests that require Docker",
]
addopts = [
    "-v",
    "--tb=short",
    "--import-mode=importlib",
]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
