[tool.poetry]
name = "integration-tests"
version = "1.0.0"
description = "Integration tests for Aegis Scholar components"
authors = ["Aegis Scholar Team"]
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.136.0"  # Used by test_identity_integration (imports app.main)
httpx = ">=0.26.0,<1.0.0"  # HTTP client for API requests
pydantic-settings = "^2.14.0"  # Used by test_identity_integration (imports app.config)
pydantic = "^2.13.3"  # Used by FastAPI apps imported in tests
neo4j = "^6.1.0"  # Neo4j driver for conftest fixtures
pytest = "^7.4.0"  # Test framework
pytest-asyncio = "^0.23.0"  # Async test support
testcontainers = ">=4.0.0"  # Docker container management
ldap3 = "^2.9.1"  # LDAP testing in test_identity_integration
docker = "^7.0.0"  # Docker network management in conftest
pymilvus = "^2.4.0"  # Milvus vector database client for test_milvus.py
numpy = "^2.0.0"  # Array operations for test_milvus.py

# Optional: Coverage and linting (not runtime dependencies)
pytest-cov = "^4.1.0"  # For coverage reports (optional)
pylint = "^4.0.5"  # Linting tool (optional)


[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["."]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
markers = [
    "integration: Integration tests",
    "slow: Slow running tests",
    "requires_docker: Tests that require Docker",
]
addopts = [
    "-v",
    "--tb=short",
    "--import-mode=importlib",
]
filterwarnings = [
    "ignore::DeprecationWarning:ldap3.utils.asn1",
]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
