[tool.poetry]
name = "graph-loader"
version = "0.1.0"
description = "Job for importing DTIC structural data and relationships into Neo4j via Graph API"
authors = ["Aegis Scholar Team"]

[tool.poetry.dependencies]
python = "^3.12"
orjson = "^3.9"
httpx = "^0.24"
pydantic = "^2.0"
pydantic-settings = "^2.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.0"
pytest-asyncio = "^0.21"
pytest-cov = "^4.1"
pytest-mock = "^3.12"

[[tool.poetry.packages]]
include = "app"
from = "."

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"