[tool.poetry]
name = "graph-loader"
version = "0.1.0"
description = "Job for importing DTIC structural data and relationships into Neo4j via Graph API"
authors = ["Aegis Scholar Team"]

[tool.poetry.dependencies]
python = "^3.12"
orjson = "^3.9"
httpx = "^0.24"
pydantic = "^2.0"
pydantic-settings = "^2.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.0"
pytest-asyncio = "^0.21"
pytest-cov = "^4.1"
pytest-mock = "^3.12"
ruff = "^0.3.0"
pylint = "^3.0.0"
pylint-pydantic = "^0.3.0"

[[tool.poetry.packages]]
include = "app"
from = "."

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
# E: pycodestyle, F: Pyflakes, B: flake8-bugbear, I: isort, UP: pyupgrade
select = ["E", "F", "B", "I", "UP"]
ignore = ["E501"] # Ignore long lines (formatter handles logic, avoids noise)

[tool.ruff.lint.isort]
known-first-party = ["app"]

# --- STATIC ANALYSIS (Pylint) ---
[tool.pylint."MESSAGES CONTROL"]
max-line-length = 100
disable = [
    "C0114", # Missing module docstring
    "C0115", # Missing class docstring
    "C0116", # Missing function docstring
    "R0903", # Too few public methods (common in Pydantic models)
    "W0718", # Catching too general exception (often necessary for loaders to keep running)
]

[tool.pylint.MASTER]
load-plugins = "pylint_pydantic"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = ["--import-mode=importlib"]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"