[tool.poetry]
name = "aegis-scholar-api"
version = "1.0.0"
description = "Aegis Scholar API - Primary interface for searching research data"
authors = ["Aegis Scholar Team"]
readme = "README.md"
packages = [{ include = "app" }]

[tool.poetry.dependencies]
python = "^3.12"
fastapi = ">=0.109.0"
uvicorn = ">=0.27.0"
pydantic = ">=2.5.0"
pydantic-settings = ">=2.0"
python-dotenv = ">=1.0.0"
httpx = ">=0.26.0"

[tool.poetry.group.dev.dependencies]
pytest = ">=7.4.0"
pytest-asyncio = ">=0.23.0"
pytest-cov = ">=4.1.0"
pytest-mock = ">=3.12.0"
black = ">=23.12.0"
ruff = ">=0.15.8"
pylint = ">=3.0.0"
bandit = ">=1.9.0"
mypy = ">=1.10.0"
pylint-pydantic = ">=0.3.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = ["--import-mode=importlib"]

[tool.coverage.run]
source = ["app"]
omit = ["tests/*", "*/__pycache__/*", "*/.venv/*"]

[tool.coverage.report]
precision = 2
show_missing = true
skip_covered = false
fail_under = 80.0

[tool.black]
line-length = 120
target-version = ["py312"]

[tool.ruff]
line-length = 120
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "B", "I", "UP"]
ignore = ["E501"]

[tool.ruff.lint.isort]
known-first-party = ["app"]

[tool.pylint.format]
max-line-length = 120

[tool.mypy]
python_version = "3.12"
ignore_missing_imports = true
warn_unused_ignores = true