[tool.poetry]
name = "example-service"
version = "0.1.0"
description = "An example FastAPI microservice"
authors = ["you <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.95"
uvicorn = {extras = ["standard"], version = "^0.22"}
pandas = "^2.0"

[tool.poetry.dev-dependencies]
pytest = "^7.0"


[[tool.poetry.packages]]
include = "app"
from = "."

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
