[tool.poetry]
name = "graph-db"
version = "0.1.0"
description = "FastAPI gateway for Neo4j graph operations"
authors = ["Aegis Scholar Team"]

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.100"
uvicorn = {extras = ["standard"], version = "^0.22"}
neo4j = "^5.12"
pydantic = "^2.0"
pydantic-settings = "^2.0"
httpx = "^0.24"

[tool.poetry.group.dev.dependencies]
pytest = "^7.0"

[[tool.poetry.packages]]
include = "app"
from = "."

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"