[tool.poetry]
name = "graph-db"
version = "0.1.0"
description = "FastAPI gateway for Neo4j graph operations"
authors = ["Aegis Scholar Team"]

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.100"
uvicorn = {extras = ["standard"], version = "^0.22"}
neo4j = "^5.12"
pydantic = "^2.0"
pydantic-settings = "^2.0"
httpx = "^0.24"

[tool.poetry.group.dev.dependencies]
pytest = "^7.0"
pytest-asyncio = "^0.21"
pytest-cov = "^4.1"
pytest-mock = "^3.12"
httpx = "^0.24"

[[tool.poetry.packages]]
include = "app"
from = "."

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"