[tool.poetry]
name = "graph-db"
version = "0.1.0"
description = "FastAPI gateway for Neo4j graph operations"
authors = ["Aegis Scholar Team"]

[tool.poetry.dependencies]
python = ">=3.12"
fastapi = ">=0.100"
uvicorn = ">=0.22"
neo4j = ">=5.12"
pydantic = ">=2.0"
pydantic-settings = ">=2.0"
httpx = ">=0.24"

[tool.poetry.group.dev.dependencies]
pytest = ">=7.0"
pytest-asyncio = ">=0.21"
pytest-cov = ">=4.1"
pytest-mock = ">=3.12"
httpx = ">=0.24"
ruff = ">=0.3.0"
pylint = ">=3.0.0"
pylint-pydantic = ">=0.3.0"

[[tool.poetry.packages]]
include = "app"
from = "."

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = ["--import-mode=importlib"]

[tool.coverage.run]
source = ["app"]
omit = ["tests/*", "*/__pycache__/*", "*/.venv/*"]

[tool.coverage.report]
precision = 2
show_missing = true
skip_covered = false
fail_under = 80.0

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
# E: pycodestyle, F: Pyflakes, B: flake8-bugbear, I: isort, UP: pyupgrade
select = ["E", "F", "B", "I", "UP"]
ignore = ["E501"] # Ignore line-length errors (formatter will handle it)

[tool.ruff.lint.isort]
known-first-party = ["app"]

[tool.pylint."MESSAGES CONTROL"]
max-line-length = 100
disable = [
    "C0114", # Missing module docstring
    "C0115", # Missing class docstring
    "C0116", # Missing function docstring
    "R0903", # Too few public methods (common in Pydantic models)
    "W0621", # Redefining name from outer scope (Pytest fixtures)
    "C0415", # Import outside toplevel (Used to prevent early DB init)
]

[tool.pylint.MASTER]
load-plugins = "pylint_pydantic" # Helps Pylint understand Pydantic v2 fields