[tool.poetry]
name = "mips"
version = "0.1.0"
description = "mock identity service"
authors = [ "markuz m.robinsondos7@gmail.com"]

[tool.poetry.dependencies]
python = ">=3.12"
fastapi = ">=0.135.3,<0.136.0"
logging = ">=0.4.9.6,<0.5.0.0"
ldap3 = ">=2.9.1,<3.0.0"
orjson = ">=3.11.8,<4.0.0"
uvicorn = ">=0.44.0,<0.45.0"
rapidfuzz = "^3.14.5"

[tool.poetry.group.dev.dependencies]
pytest = "^7.0"
httpx = "^0.24"
pytest-asyncio = "^0.21"
pytest-cov = "^4.1"
pytest-mock = "^3.12"
ruff = "^0.15.8"
pylint = "^4.0.5"

[[tool.poetry.packages]]
include = "app"
from = "."

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.ruff.lint]
extend-select = ["B"]