[tool.poetry]
name = "vector-db"
version = "0.1.0"
description = "FastAPI microservice for Milvus vector search operations"
authors = ["you <you@example.com>"]

[tool.poetry.dependencies]
python = ">=3.12,<3.13"  # FastEmbed requires <3.13
fastapi = "^0.110"
uvicorn = "^0.22"  # Removed [standard] extras for smaller image
pymilvus = "^2.3"
pydantic = "^2.0"
pydantic-settings = "^2.0"
fastembed = "^0.3"  # ONNX-based embeddings (much smaller than PyTorch)
numpy = "^2.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.0"
httpx = "^0.24"
pytest-asyncio = "^0.21"
pytest-cov = "^4.1"
pytest-mock = "^3.12"
ruff = "^0.15.8"
pylint = "^4.0.5"


[[tool.poetry.packages]]
include = "app"
from = "."

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = ["--import-mode=importlib"]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.ruff.lint]
extend-select = ["B"]

[tool.pylint.main]
ignore = [".venv", "tests"]

[tool.pylint.design]
max-args = 7  # Allow up to 7 arguments (default is 5)
max-locals = 20  # Allow up to 20 local variables (default is 15)
max-nested-blocks = 6  # Allow up to 6 nested blocks (default is 5)

[tool.pylint.basic]
# Allow single-char variable names for common cases (e.g., 'e' for exceptions)
good-names = ["i", "j", "k", "e", "ex", "id", "_"]