[tool.poetry]
name = "vector-db"
version = "0.1.0"
description = "FastAPI microservice for Milvus vector search operations"
authors = ["Aegis Scholar Team"]

[tool.poetry.dependencies]
python = ">=3.12,<3.13"  # FastEmbed requires <3.13
fastapi = ">=0.115"  # >=0.115 required for starlette >=0.47.2 (CVE-2024-47874, CVE-2025-54121)
starlette = ">=0.47.2"  # CVE-2024-47874 (DoS multipart), CVE-2025-54121 (event-loop block)
uvicorn = ">=0.22"  # Removed [standard] extras for smaller image
h11 = ">=0.16.0"  # CVE-2025-43859 (HTTP request smuggling, critical 9.1; transitive via uvicorn)
pymilvus = ">=2.3"
pydantic = ">=2.0"
pydantic-settings = ">=2.0"
fastembed = ">=0.4"  # 0.3.x hard-caps pillow<11; >=0.4 allows pillow>=12.1.1 (CVE-2026-25990)
numpy = ">=2.0"
pillow = ">=12.1.1"  # CVE-2026-25990 (out-of-bounds write on PSD load)

[tool.poetry.group.dev.dependencies]
pytest = ">=7.4.0"
httpx = ">=0.27.0"
pytest-asyncio = ">=0.23.0"
pytest-cov = ">=4.1.0"
pytest-mock = ">=3.12.0"
ruff = ">=0.15.8"
pylint = ">=3.0.0"
bandit = ">=1.9.4"
mypy = ">=1.19.1"
pylint-pydantic = ">=0.3.0"

[[tool.poetry.packages]]
include = "app"
from = "."

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = ["--import-mode=importlib"]

[tool.coverage.run]
source = ["app"]
omit = ["tests/*", "*/__pycache__/*", "*/.venv/*"]

[tool.coverage.report]
precision = 2
show_missing = true
skip_covered = false
fail_under = 80.0

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 120
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "B", "I", "UP"]
ignore = ["E501"]

[tool.ruff.lint.isort]
known-first-party = ["app"]

[tool.pylint.main]
ignore = [".venv", "tests"]

[tool.pylint.design]
max-args = 7
max-locals = 20
max-nested-blocks = 6

[tool.pylint.format]
max-line-length = 120

[tool.mypy]
python_version = "3.12"
ignore_missing_imports = true
warn_unused_ignores = true